modules/kibana/files/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Elasticsearch
-A INPUT -m pkttype --pkt-type multicast -j ACCEPT 

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
# Kibana
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
# Syslog
-A INPUT -m state --state NEW -m tcp -p tcp --dport 514 -j ACCEPT
# Logstash
-A INPUT -m state --state NEW -m tcp -p tcp --dport 5043 -j ACCEPT

# Elasticsearch
-A INPUT -m state --state NEW -m tcp -p tcp --dport 9200:9400 -j ACCEPT
# Zabbix
-A INPUT -m state --state NEW -m tcp -p tcp --dport 10050 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
